minor: removing indicators and fixing spacing at other projects page

--- a/src/assets/sass/containers/projects/_projects.scss
+++ b/src/assets/sass/containers/projects/_projects.scss
@@ -52,6 +52,7 @@
             // background-color: red;
         }
         .section-other-projects{
+            margin-top: 3.5rem;
             width: 70%;
             position: relative;
             //max-width: 70%;
